deployment/svc.proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: stackmgr-proxy
spec:
  type: ClusterIP
  selector:
    app: stackmgr-proxy
  ports:
  - port: 5380
    protocol: TCP
