deployment/ingress.proxy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: ingress-stackmgr-proxy
spec:
  rules:
  #
  # Replace hostname in host and tls.hosts ->
  #
  - host: mgr.stack.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: stackmgr-proxy
            port:
              number: 5380
  tls:
  - hosts:
    - mgr.stack.example.com
    secretName: letsencrypt-stackmgr-proxy
